* Version 1.4

## Major Features
* Polygons no longer have a per-polygon max vertex count. There is now only a maximum total vertex count for the entire level.
* Steam elma.res is supported
* Elma now honors the local keyboard layout for text input instead of being forced to US qwerty layout

## Major Bug Fixes
* It is possible to properly collect more than 200 apples in a single frame
* Wheel turning the wrong way in replays is fixed (glitch starts at 455 speed instead of 124 speed, where max gas speed is approximately 220)

## Minor Features
* Improve picture loading speed by allocating all needed memory at once instead of allocating in blocks of 64 KB (DOS-era restriction)
* Error messages and menu warnings are now vertically centered on the screen
* Intro scrolling animation will always take 1.15 seconds, regardless of screen resolution
* Intro scrolling animation is now skippable by pressing Enter or Esc, instead of being an eolconf setting
* Background menu balls start off centered in the screen
* Palette is processed as a 24-bit color instead of an 18-bit color, slightly improving color accuracy
* Maximum number of displayed levels/recs in menu increased from 29 to up to 200 for high resolutions
* Dialog pop-ups are centered on the screen
* message.inf is no longer required to view error messages, and error messages are now all in English
* turntime can now be configured
* You can now type more non-letter symbols in game menus, like saving a replay or level named `!cov!`

## Minor Bug Fixes
* Enforce lowercase LGR filenames to fix loading issues on case-sensitive filesystems
* Foreground grass was accidentally inefficiently calculated, causing increased load time
* Internal editor's Save As dialog box could cause buffer overflows
* Internal editor's Save As would sometimes overwrite old files without giving a warning
* Level description in internal editor is properly centered